# Solar_LLM_Project

./: .gitignore  README.md  README_FANCY.md  example.py  kafka_udemy  kafka_udemy.md  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml  unittest.yml
tests/: test_module_name.py
tests/subpackage_name/: test_subpackage_module_name.py
